# claude-code-stats

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: index.html
scripts/: regen-demo.sh.example
src/: main.rs
templates/: report.html
