[package]
name = "cc-stats"
version = "0.1.0"
edition = "2021"
authors = ["shdennlin <shawndennislin@gmail.com>"]
description = "Claude Code usage analytics — token / cost / active-time / skill-attribution stats parsed from ~/.claude/projects/**/*.jsonl"
license = "MIT"
readme = "README.md"
repository = "https://github.com/shdennlin/claude-code-stats"
homepage = "https://github.com/shdennlin/claude-code-stats"
categories = ["command-line-utilities", "development-tools"]
keywords = ["claude-code", "analytics", "cli", "usage", "stats"]

[[bin]]
name = "cc-stats"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
